Update release notes

--- a/v1.20.4.md
+++ b/v1.20.4.md
@@ -13,20 +13,21 @@
 # CRI-O v1.20.4
 
 The release notes have been generated for the commit range
-[v1.20.3...9d682e1](https://github.com/cri-o/cri-o/compare/v1.20.3...9d682e1f82a2e66340d11e7196f76a88a09de0a3) on Tue, 17 Aug 2021 20:56:39 UTC.
+[v1.20.3...9275d5c](https://github.com/cri-o/cri-o/compare/v1.20.3...9275d5cfd264b55bdb05571e3c64976f3c0f566c) on Mon, 23 Aug 2021 20:06:19 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.9d682e1f82a2e66340d11e7196f76a88a09de0a3.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.9d682e1f82a2e66340d11e7196f76a88a09de0a3.tar.gz)
-- [cri-o.arm64.9d682e1f82a2e66340d11e7196f76a88a09de0a3.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.9d682e1f82a2e66340d11e7196f76a88a09de0a3.tar.gz)
+- [cri-o.amd64.9275d5cfd264b55bdb05571e3c64976f3c0f566c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.9275d5cfd264b55bdb05571e3c64976f3c0f566c.tar.gz)
+- [cri-o.arm64.9275d5cfd264b55bdb05571e3c64976f3c0f566c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.9275d5cfd264b55bdb05571e3c64976f3c0f566c.tar.gz)
 
 ## Changelog since v1.20.3
 
 ### Changes by Kind
 
 #### Feature
+ - Add clean_shutdown_file option to allow crio/crio wipe to verify crio had time to shutdown cleanly ([#5229](https://github.com/cri-o/cri-o/pull/5229), [@haircommander](https://github.com/haircommander))
  - CNI plugins are now passed a K8S_POD_UID environment variable containing the pod UID this sandbox was started for. ([#5029](https://github.com/cri-o/cri-o/pull/5029), [@dcbw](https://github.com/dcbw))
 
 #### Bug or Regression
