Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -3,6 +3,7 @@
   - [Changelog since v1.21.0](#changelog-since-v1210)
     - [Changes by Kind](#changes-by-kind)
       - [Dependency-Change](#dependency-change)
+      - [Deprecation](#deprecation)
       - [API Change](#api-change)
       - [Feature](#feature)
       - [Design](#design)
@@ -17,14 +18,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...10db266](https://github.com/cri-o/cri-o/compare/v1.21.0...10db266b44488bc4f17a7af5c51303f511345bdc) on Tue, 24 Aug 2021 08:39:13 UTC.
+[v1.21.0...3682514](https://github.com/cri-o/cri-o/compare/v1.21.0...3682514ecb8816dead15b2025084ddc61320fac6) on Tue, 24 Aug 2021 19:06:29 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.10db266b44488bc4f17a7af5c51303f511345bdc.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.10db266b44488bc4f17a7af5c51303f511345bdc.tar.gz)
-- [cri-o.arm64.10db266b44488bc4f17a7af5c51303f511345bdc.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.10db266b44488bc4f17a7af5c51303f511345bdc.tar.gz)
+- [cri-o.amd64.3682514ecb8816dead15b2025084ddc61320fac6.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.3682514ecb8816dead15b2025084ddc61320fac6.tar.gz)
+- [cri-o.arm64.3682514ecb8816dead15b2025084ddc61320fac6.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.3682514ecb8816dead15b2025084ddc61320fac6.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -35,6 +36,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Update static binary bundle runc version to `v1.0.0-rc94`. ([#4882](https://github.com/cri-o/cri-o/pull/4882), [@saschagrunert](https://github.com/saschagrunert))
  - Update static binary bundle runc version to `v1.0.0-rc95`. ([#4920](https://github.com/cri-o/cri-o/pull/4920), [@saschagrunert](https://github.com/saschagrunert))
  - Updated crun in static binary bundle to v0.20.1 ([#4959](https://github.com/cri-o/cri-o/pull/4959), [@saschagrunert](https://github.com/saschagrunert))
+
+#### Deprecation
+ - The internal_wipe option is now true by default. Further, it is being deprecated, and will be unconditionally true in the future. ([#5218](https://github.com/cri-o/cri-o/pull/5218), [@haircommander](https://github.com/haircommander))
 
 #### API Change
  - Update how the resources for a workload is specified. Now, to override a workload, the pod must have the annotation `$prefix/$ctr_name = {"$resource_type": "$resource_value"}`. The workloads feature has also been marked as experimental, which should have happened from the beginning. ([#4787](https://github.com/cri-o/cri-o/pull/4787), [@haircommander](https://github.com/haircommander))
@@ -272,9 +276,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/moby/term: [df9cb8a → 9d4ed18](https://github.com/moby/term/compare/df9cb8a...9d4ed18)
 - github.com/olekukonko/tablewriter: [v0.0.4 → v0.0.5](https://github.com/olekukonko/tablewriter/compare/v0.0.4...v0.0.5)
 - github.com/onsi/ginkgo: [v1.15.2 → v1.16.4](https://github.com/onsi/ginkgo/compare/v1.15.2...v1.16.4)
-- github.com/onsi/gomega: [v1.11.0 → v1.15.0](https://github.com/onsi/gomega/compare/v1.11.0...v1.15.0)
+- github.com/onsi/gomega: [v1.11.0 → v1.16.0](https://github.com/onsi/gomega/compare/v1.11.0...v1.16.0)
 - github.com/opencontainers/image-spec: [79b036d → 083f635](https://github.com/opencontainers/image-spec/compare/79b036d...083f635)
-- github.com/opencontainers/runc: [v1.0.0-rc93 → v1.0.1](https://github.com/opencontainers/runc/compare/v1.0.0-rc93...v1.0.1)
+- github.com/opencontainers/runc: [v1.0.0-rc93 → v1.0.2](https://github.com/opencontainers/runc/compare/v1.0.0-rc93...v1.0.2)
 - github.com/opencontainers/runtime-spec: [7413a7f → 8961758](https://github.com/opencontainers/runtime-spec/compare/7413a7f...8961758)
 - github.com/opencontainers/runtime-tools: [d1bf3e6 → 59cdde0](https://github.com/opencontainers/runtime-tools/compare/d1bf3e6...59cdde0)
 - github.com/opencontainers/selinux: [v1.8.0 → v1.8.4](https://github.com/opencontainers/selinux/compare/v1.8.0...v1.8.4)
@@ -293,7 +297,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/spf13/cast: [v1.3.0 → v1.3.1](https://github.com/spf13/cast/compare/v1.3.0...v1.3.1)
 - github.com/spf13/cobra: [v1.1.3 → v1.2.1](https://github.com/spf13/cobra/compare/v1.1.3...v1.2.1)
 - github.com/spf13/viper: [v1.7.0 → v1.8.1](https://github.com/spf13/viper/compare/v1.7.0...v1.8.1)
-- github.com/syndtr/gocapability: [42c35b4 → d983527](https://github.com/syndtr/gocapability/compare/42c35b4...d983527)
 - github.com/tmc/grpc-websocket-proxy: [0ad062e → e5319fd](https://github.com/tmc/grpc-websocket-proxy/compare/0ad062e...e5319fd)
 - github.com/uber/jaeger-client-go: [v2.25.0+incompatible → v2.29.1+incompatible](https://github.com/uber/jaeger-client-go/compare/v2.25.0...v2.29.1)
 - github.com/vbauerster/mpb/v6: [v6.0.3 → v6.0.4](https://github.com/vbauerster/mpb/v6/compare/v6.0.3...v6.0.4)
