Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...3682514](https://github.com/cri-o/cri-o/compare/v1.21.0...3682514ecb8816dead15b2025084ddc61320fac6) on Tue, 24 Aug 2021 19:06:29 UTC.
+[v1.21.0...5d5a754](https://github.com/cri-o/cri-o/compare/v1.21.0...5d5a7543fdbb6c9ccf173bd6218ffdbc8f228535) on Tue, 24 Aug 2021 21:52:56 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.3682514ecb8816dead15b2025084ddc61320fac6.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.3682514ecb8816dead15b2025084ddc61320fac6.tar.gz)
-- [cri-o.arm64.3682514ecb8816dead15b2025084ddc61320fac6.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.3682514ecb8816dead15b2025084ddc61320fac6.tar.gz)
+- [cri-o.amd64.5d5a7543fdbb6c9ccf173bd6218ffdbc8f228535.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.5d5a7543fdbb6c9ccf173bd6218ffdbc8f228535.tar.gz)
+- [cri-o.arm64.5d5a7543fdbb6c9ccf173bd6218ffdbc8f228535.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.5d5a7543fdbb6c9ccf173bd6218ffdbc8f228535.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -59,6 +59,11 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Cri-o now does not limit the DNS search paths. ([#5199](https://github.com/cri-o/cri-o/pull/5199), [@gjkim42](https://github.com/gjkim42))
  - Enable the  "volatile" option for the overlay drivers when it is supported by the underlying kernel. ([#4885](https://github.com/cri-o/cri-o/pull/4885), [@giuseppe](https://github.com/giuseppe))
  - Rootless: enable resource limit when cgroup v2 controllers are delegated. ([#4528](https://github.com/cri-o/cri-o/pull/4528), [@AkihiroSuda](https://github.com/AkihiroSuda))
+ - Support `io.kubernetes.cri.blockio-class` container annotation for specifying blockio class.
+  Support `blockio.resources.beta.kubernetes.io/pod` pod annotation for specifying the default blockio class to all containers in the pod.
+  Support `blockio.resources.beta.kubernetes.io/container.NAME` pod annotation for specifying the blockio class of the NAME container in the pod.
+  
+  Add blockio_config_file config file option (and corresponding --blockio-config-file for command line) for configuring blockio classes and their cgroups blockio controller parameters. ([#4873](https://github.com/cri-o/cri-o/pull/4873), [@askervin](https://github.com/askervin))
  - Support `io.kubernetes.cri.rdt-class` container annotation for specifying RDT class.
   
   Add rdt_config_file config file option (and corresponding --rdt-config-file for command line) for configuring the resctrl pseudo-filesystem. ([#4830](https://github.com/cri-o/cri-o/pull/4830), [@marquiz](https://github.com/marquiz))
@@ -148,7 +153,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/google/licenseclassifier/v2: [v2.0.0-alpha.1](https://github.com/google/licenseclassifier/v2/tree/v2.0.0-alpha.1)
 - github.com/hashicorp/go-hclog: [v0.9.2](https://github.com/hashicorp/go-hclog/tree/v0.9.2)
 - github.com/hashicorp/go-retryablehttp: [v0.6.4](https://github.com/hashicorp/go-retryablehttp/tree/v0.6.4)
-- github.com/intel/goresctrl: [be5fa85](https://github.com/intel/goresctrl/tree/be5fa85)
+- github.com/intel/goresctrl: [v0.1.0](https://github.com/intel/goresctrl/tree/v0.1.0)
 - github.com/jinzhu/copier: [v0.3.2](https://github.com/jinzhu/copier/tree/v0.3.2)
 - github.com/josharian/intern: [v1.0.0](https://github.com/josharian/intern/tree/v1.0.0)
 - github.com/kr/fs: [v0.1.0](https://github.com/kr/fs/tree/v0.1.0)
