Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...5d5a754](https://github.com/cri-o/cri-o/compare/v1.21.0...5d5a7543fdbb6c9ccf173bd6218ffdbc8f228535) on Tue, 24 Aug 2021 21:52:56 UTC.
+[v1.21.0...6becad2](https://github.com/cri-o/cri-o/compare/v1.21.0...6becad23eadd7dfdd25fd8df386bf3b706cf7758) on Wed, 25 Aug 2021 03:07:28 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.5d5a7543fdbb6c9ccf173bd6218ffdbc8f228535.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.5d5a7543fdbb6c9ccf173bd6218ffdbc8f228535.tar.gz)
-- [cri-o.arm64.5d5a7543fdbb6c9ccf173bd6218ffdbc8f228535.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.5d5a7543fdbb6c9ccf173bd6218ffdbc8f228535.tar.gz)
+- [cri-o.amd64.6becad23eadd7dfdd25fd8df386bf3b706cf7758.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.6becad23eadd7dfdd25fd8df386bf3b706cf7758.tar.gz)
+- [cri-o.arm64.6becad23eadd7dfdd25fd8df386bf3b706cf7758.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.6becad23eadd7dfdd25fd8df386bf3b706cf7758.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -92,6 +92,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where server startup was significantly slowed down by attempting to clean up CNI resources after a reboot. ([#4929](https://github.com/cri-o/cri-o/pull/4929), [@haircommander](https://github.com/haircommander))
  - Fix a performance regression with exec probes ([#5136](https://github.com/cri-o/cri-o/pull/5136), [@haircommander](https://github.com/haircommander))
  - Fix a segfault when CRI-O has takes more than 8 minutes to create a pod or container ([#4834](https://github.com/cri-o/cri-o/pull/4834), [@haircommander](https://github.com/haircommander))
+ - Fix an RSS regression with exec sync requests ([#5245](https://github.com/cri-o/cri-o/pull/5245), [@haircommander](https://github.com/haircommander))
  - Fix an issue where a container started with a terminal fails on exec sync calls ([#5107](https://github.com/cri-o/cri-o/pull/5107), [@haircommander](https://github.com/haircommander))
  - Fix drop ALL and add back few caps behavior to not include the default configured capabilities ([#4923](https://github.com/cri-o/cri-o/pull/4923), [@mrunalp](https://github.com/mrunalp))
  - Fix potential panic when reopening a container's log ([#5212](https://github.com/cri-o/cri-o/pull/5212), [@haircommander](https://github.com/haircommander))
