--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -18,7 +18,7 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...6becad2](https://github.com/cri-o/cri-o/compare/v1.21.0...6becad23eadd7dfdd25fd8df386bf3b706cf7758) on Wed, 25 Aug 2021 03:07:28 UTC.
+[v1.21.0...6becad2](https://github.com/cri-o/cri-o/compare/v1.21.0...6becad23eadd7dfdd25fd8df386bf3b706cf7758) on Wed, 25 Aug 2021 10:15:44 EDT.
 
 ## Downloads
 
