--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...6becad2](https://github.com/cri-o/cri-o/compare/v1.21.0...6becad23eadd7dfdd25fd8df386bf3b706cf7758) on Wed, 25 Aug 2021 10:15:44 EDT.
+[v1.21.0...87d9f16](https://github.com/cri-o/cri-o/compare/v1.21.0...87d9f169dad21a9049f25e47c3c8f78635bea340) on Wed, 25 Aug 2021 22:48:35 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.6becad23eadd7dfdd25fd8df386bf3b706cf7758.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.6becad23eadd7dfdd25fd8df386bf3b706cf7758.tar.gz)
-- [cri-o.arm64.6becad23eadd7dfdd25fd8df386bf3b706cf7758.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.6becad23eadd7dfdd25fd8df386bf3b706cf7758.tar.gz)
+- [cri-o.amd64.87d9f169dad21a9049f25e47c3c8f78635bea340.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.87d9f169dad21a9049f25e47c3c8f78635bea340.tar.gz)
+- [cri-o.arm64.87d9f169dad21a9049f25e47c3c8f78635bea340.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.87d9f169dad21a9049f25e47c3c8f78635bea340.tar.gz)
 
 ## Changelog since v1.21.0
 
