--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...4a1c191](https://github.com/cri-o/cri-o/compare/v1.21.0...4a1c19135c9597afcb6821b4593bd95e825fdde1) on Thu, 26 Aug 2021 09:57:50 UTC.
+[v1.21.0...f85d0be](https://github.com/cri-o/cri-o/compare/v1.21.0...f85d0be735d4f7a7b78503ae4fe864af97d7e6e8) on Fri, 27 Aug 2021 13:16:52 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.4a1c19135c9597afcb6821b4593bd95e825fdde1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.4a1c19135c9597afcb6821b4593bd95e825fdde1.tar.gz)
-- [cri-o.arm64.4a1c19135c9597afcb6821b4593bd95e825fdde1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.4a1c19135c9597afcb6821b4593bd95e825fdde1.tar.gz)
+- [cri-o.amd64.f85d0be735d4f7a7b78503ae4fe864af97d7e6e8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f85d0be735d4f7a7b78503ae4fe864af97d7e6e8.tar.gz)
+- [cri-o.arm64.f85d0be735d4f7a7b78503ae4fe864af97d7e6e8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f85d0be735d4f7a7b78503ae4fe864af97d7e6e8.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -100,6 +100,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   seccomp disabled builds/machines ([#4789](https://github.com/cri-o/cri-o/pull/4789), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed bug where runtime VM created containers never reach their `completed` state. ([#4803](https://github.com/cri-o/cri-o/pull/4803), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed linkmode detection for on `en_US` systems `crio version` ([#5168](https://github.com/cri-o/cri-o/pull/5168), [@saschagrunert](https://github.com/saschagrunert))
+ - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5258](https://github.com/cri-o/cri-o/pull/5258), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed runtime panic for layers lockfile if its parent directory does not exist.
   Added support for repositories in auth.json ([#5076](https://github.com/cri-o/cri-o/pull/5076), [@saschagrunert](https://github.com/saschagrunert))
  - Re-attempt setting up conmon's cgroup if it fails on EAGAIN from dbus ([#4921](https://github.com/cri-o/cri-o/pull/4921), [@haircommander](https://github.com/haircommander))
@@ -242,6 +243,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/envoyproxy/go-control-plane: [5f8ba28 → 63b5d3c](https://github.com/envoyproxy/go-control-plane/compare/5f8ba28...63b5d3c)
 - github.com/evanphx/json-patch: [v4.9.0+incompatible → v4.11.0+incompatible](https://github.com/evanphx/json-patch/compare/v4.9.0...v4.11.0)
 - github.com/form3tech-oss/jwt-go: [v3.2.2+incompatible → v3.2.3+incompatible](https://github.com/form3tech-oss/jwt-go/compare/v3.2.2...v3.2.3)
+- github.com/fsnotify/fsnotify: [v1.4.9 → v1.5.1](https://github.com/fsnotify/fsnotify/compare/v1.4.9...v1.5.1)
 - github.com/fsouza/go-dockerclient: [v1.7.2 → v1.7.3](https://github.com/fsouza/go-dockerclient/compare/v1.7.2...v1.7.3)
 - github.com/go-kit/kit: [v0.10.0 → v0.9.0](https://github.com/go-kit/kit/compare/v0.10.0...v0.9.0)
 - github.com/go-openapi/jsonpointer: [v0.19.3 → v0.19.5](https://github.com/go-openapi/jsonpointer/compare/v0.19.3...v0.19.5)
