Update release notes

--- a/v1.21.2.md
+++ b/v1.21.2.md
@@ -14,14 +14,14 @@
 # CRI-O v1.21.2
 
 The release notes have been generated for the commit range
-[v1.21.1...cd588bf](https://github.com/cri-o/cri-o/compare/v1.21.1...cd588bfd7a710a7d5043a1791dcc9516646df9b3) on Thu, 26 Aug 2021 01:41:49 UTC.
+[v1.21.1...cdc4f56](https://github.com/cri-o/cri-o/compare/v1.21.1...cdc4f567ec436be943faf2dd62ab1cd71dffe36c) on Mon, 30 Aug 2021 09:42:15 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.cd588bfd7a710a7d5043a1791dcc9516646df9b3.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.cd588bfd7a710a7d5043a1791dcc9516646df9b3.tar.gz)
-- [cri-o.arm64.cd588bfd7a710a7d5043a1791dcc9516646df9b3.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.cd588bfd7a710a7d5043a1791dcc9516646df9b3.tar.gz)
+- [cri-o.amd64.cdc4f567ec436be943faf2dd62ab1cd71dffe36c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.cdc4f567ec436be943faf2dd62ab1cd71dffe36c.tar.gz)
+- [cri-o.arm64.cdc4f567ec436be943faf2dd62ab1cd71dffe36c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.cdc4f567ec436be943faf2dd62ab1cd71dffe36c.tar.gz)
 
 ## Changelog since v1.21.1
 
@@ -44,6 +44,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Uncategorized
  - ExecSync requests now don't use conmon, instead calling the runtime directly, which reduces overhead. ([#4962](https://github.com/cri-o/cri-o/pull/4962), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where an exec sync timeout would fail to cleanup the runtime exec process ([#5002](https://github.com/cri-o/cri-o/pull/5002), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix an RSS regression with exec sync requests ([#5262](https://github.com/cri-o/cri-o/pull/5262), [@haircommander](https://github.com/haircommander))
  - Fix an issue where a container started with a terminal fails on exec sync calls ([#5121](https://github.com/cri-o/cri-o/pull/5121), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Wait for CNI plugins to be ready before starting non-host-network pods, to allow pods that may run CNI plugins to start faster ([#5084](https://github.com/cri-o/cri-o/pull/5084), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
