Update release notes

--- a/v1.20.4.md
+++ b/v1.20.4.md
@@ -13,14 +13,14 @@
 # CRI-O v1.20.4
 
 The release notes have been generated for the commit range
-[v1.20.3...fd45842](https://github.com/cri-o/cri-o/compare/v1.20.3...fd458427d5fc54081e165acf7d3a0b1aa6cceac9) on Wed, 01 Sep 2021 00:37:00 UTC.
+[v1.20.3...bce257b](https://github.com/cri-o/cri-o/compare/v1.20.3...bce257bb12e7361a59163339d092b09c8480b172) on Wed, 01 Sep 2021 05:01:20 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.fd458427d5fc54081e165acf7d3a0b1aa6cceac9.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.fd458427d5fc54081e165acf7d3a0b1aa6cceac9.tar.gz)
-- [cri-o.arm64.fd458427d5fc54081e165acf7d3a0b1aa6cceac9.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.fd458427d5fc54081e165acf7d3a0b1aa6cceac9.tar.gz)
+- [cri-o.amd64.bce257bb12e7361a59163339d092b09c8480b172.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.bce257bb12e7361a59163339d092b09c8480b172.tar.gz)
+- [cri-o.arm64.bce257bb12e7361a59163339d092b09c8480b172.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.bce257bb12e7361a59163339d092b09c8480b172.tar.gz)
 
 ## Changelog since v1.20.3
 
@@ -44,6 +44,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Uncategorized
  - Fix a bug where an exec sync timeout would fail to cleanup the runtime exec process ([#5000](https://github.com/cri-o/cri-o/pull/5000), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix an RSS regression with exec sync requests ([#5270](https://github.com/cri-o/cri-o/pull/5270), [@mrunalp](https://github.com/mrunalp))
  - Fix an issue where a container started with a terminal fails on exec sync calls ([#5122](https://github.com/cri-o/cri-o/pull/5122), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
