Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...a78b80c](https://github.com/cri-o/cri-o/compare/v1.21.0...a78b80c30f9a2b15dde9c8872d8c6aada2f19e5d) on Wed, 01 Sep 2021 09:09:00 UTC.
+[v1.21.0...35d1be8](https://github.com/cri-o/cri-o/compare/v1.21.0...35d1be86dcd5bab3f772c3c6b1ec85f34477a76a) on Mon, 06 Sep 2021 22:07:55 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.a78b80c30f9a2b15dde9c8872d8c6aada2f19e5d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a78b80c30f9a2b15dde9c8872d8c6aada2f19e5d.tar.gz)
-- [cri-o.arm64.a78b80c30f9a2b15dde9c8872d8c6aada2f19e5d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a78b80c30f9a2b15dde9c8872d8c6aada2f19e5d.tar.gz)
+- [cri-o.amd64.35d1be86dcd5bab3f772c3c6b1ec85f34477a76a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.35d1be86dcd5bab3f772c3c6b1ec85f34477a76a.tar.gz)
+- [cri-o.arm64.35d1be86dcd5bab3f772c3c6b1ec85f34477a76a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.35d1be86dcd5bab3f772c3c6b1ec85f34477a76a.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -246,6 +246,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/fsnotify/fsnotify: [v1.4.9 → v1.5.1](https://github.com/fsnotify/fsnotify/compare/v1.4.9...v1.5.1)
 - github.com/fsouza/go-dockerclient: [v1.7.2 → v1.7.3](https://github.com/fsouza/go-dockerclient/compare/v1.7.2...v1.7.3)
 - github.com/go-kit/kit: [v0.10.0 → v0.9.0](https://github.com/go-kit/kit/compare/v0.10.0...v0.9.0)
+- github.com/go-logr/logr: [v0.4.0 → v1.1.0](https://github.com/go-logr/logr/compare/v0.4.0...v1.1.0)
 - github.com/go-openapi/jsonpointer: [v0.19.3 → v0.19.5](https://github.com/go-openapi/jsonpointer/compare/v0.19.3...v0.19.5)
 - github.com/go-openapi/jsonreference: [v0.19.3 → v0.19.5](https://github.com/go-openapi/jsonreference/compare/v0.19.3...v0.19.5)
 - github.com/go-openapi/swag: [v0.19.5 → v0.19.14](https://github.com/go-openapi/swag/compare/v0.19.5...v0.19.14)
@@ -330,7 +331,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - gopkg.in/gcfg.v1: v1.2.3 → v1.2.0
 - gopkg.in/ini.v1: v1.51.0 → v1.62.0
 - gopkg.in/yaml.v3: eeeca48 → 496545a
-- k8s.io/klog/v2: v2.8.0 → v2.10.0
+- k8s.io/klog/v2: v2.8.0 → v2.20.0
 - k8s.io/kube-openapi: 591a79e → 9528897
 - k8s.io/kubernetes/staging/src/k8s.io/api: cb303e6 → c2b5237
 - k8s.io/kubernetes/staging/src/k8s.io/apiextensions-apiserver: cb303e6 → c2b5237
