--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...35d1be8](https://github.com/cri-o/cri-o/compare/v1.21.0...35d1be86dcd5bab3f772c3c6b1ec85f34477a76a) on Mon, 06 Sep 2021 22:07:55 UTC.
+[v1.21.0...2ae3427](https://github.com/cri-o/cri-o/compare/v1.21.0...2ae3427579d506ffa9b4e0d7c75cf3a0b7b312f2) on Thu, 09 Sep 2021 08:20:27 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.35d1be86dcd5bab3f772c3c6b1ec85f34477a76a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.35d1be86dcd5bab3f772c3c6b1ec85f34477a76a.tar.gz)
-- [cri-o.arm64.35d1be86dcd5bab3f772c3c6b1ec85f34477a76a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.35d1be86dcd5bab3f772c3c6b1ec85f34477a76a.tar.gz)
+- [cri-o.amd64.2ae3427579d506ffa9b4e0d7c75cf3a0b7b312f2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.2ae3427579d506ffa9b4e0d7c75cf3a0b7b312f2.tar.gz)
+- [cri-o.arm64.2ae3427579d506ffa9b4e0d7c75cf3a0b7b312f2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.2ae3427579d506ffa9b4e0d7c75cf3a0b7b312f2.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -81,6 +81,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Add the config field `internal_wipe` which moves the responsibility of wiping containers after a reboot and images after an upgrade from the external binary `crio wipe` to the main crio server. This has a handful of advantages, the main one being crio is now better able to cleanup CNI resources after a reboot. ([#4767](https://github.com/cri-o/cri-o/pull/4767), [@haircommander](https://github.com/haircommander))
  - Allow users to customize conmon's resources if a pod is in a workload. ([#4907](https://github.com/cri-o/cri-o/pull/4907), [@haircommander](https://github.com/haircommander))
  - CRI-O now logs when it is using cgroupv2 ([#5183](https://github.com/cri-o/cri-o/pull/5183), [@haircommander](https://github.com/haircommander))
+ - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5283](https://github.com/cri-o/cri-o/pull/5283), [@haircommander](https://github.com/haircommander))
  - Fix a bug in `internal_wipe` that would mean CNI resources would be leaked across reboots. ([#4900](https://github.com/cri-o/cri-o/pull/4900), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O can't work with runc 1.0.0-rc93 because of an incorrectly specified list of capabilities ([#4828](https://github.com/cri-o/cri-o/pull/4828), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O would leak opened files for namespaces on a server restore ([#4758](https://github.com/cri-o/cri-o/pull/4758), [@haircommander](https://github.com/haircommander))
