Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...2ae3427](https://github.com/cri-o/cri-o/compare/v1.21.0...2ae3427579d506ffa9b4e0d7c75cf3a0b7b312f2) on Thu, 09 Sep 2021 08:20:27 UTC.
+[v1.21.0...59e5f02](https://github.com/cri-o/cri-o/compare/v1.21.0...59e5f02a89c5df4b11ee767eedae42c8c236a24e) on Fri, 10 Sep 2021 15:06:19 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.2ae3427579d506ffa9b4e0d7c75cf3a0b7b312f2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.2ae3427579d506ffa9b4e0d7c75cf3a0b7b312f2.tar.gz)
-- [cri-o.arm64.2ae3427579d506ffa9b4e0d7c75cf3a0b7b312f2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.2ae3427579d506ffa9b4e0d7c75cf3a0b7b312f2.tar.gz)
+- [cri-o.amd64.59e5f02a89c5df4b11ee767eedae42c8c236a24e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.59e5f02a89c5df4b11ee767eedae42c8c236a24e.tar.gz)
+- [cri-o.arm64.59e5f02a89c5df4b11ee767eedae42c8c236a24e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.59e5f02a89c5df4b11ee767eedae42c8c236a24e.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -97,6 +97,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix an issue where a container started with a terminal fails on exec sync calls ([#5107](https://github.com/cri-o/cri-o/pull/5107), [@haircommander](https://github.com/haircommander))
  - Fix drop ALL and add back few caps behavior to not include the default configured capabilities ([#4923](https://github.com/cri-o/cri-o/pull/4923), [@mrunalp](https://github.com/mrunalp))
  - Fix potential panic when reopening a container's log ([#5212](https://github.com/cri-o/cri-o/pull/5212), [@haircommander](https://github.com/haircommander))
+ - Fixed `contrib/metrics-exporter/cluster.yaml` for `kubectl create`. ([#5286](https://github.com/cri-o/cri-o/pull/5286), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed bug where it was not possible to run containers using the default or no seccomp profile on 
   seccomp disabled builds/machines ([#4789](https://github.com/cri-o/cri-o/pull/4789), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed bug where runtime VM created containers never reach their `completed` state. ([#4803](https://github.com/cri-o/cri-o/pull/4803), [@saschagrunert](https://github.com/saschagrunert))
@@ -112,6 +113,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Other (Cleanup or Flake)
  - Add systemd After=crio.service to containers and conmon ([#4766](https://github.com/cri-o/cri-o/pull/4766), [@mrunalp](https://github.com/mrunalp))
+ - Do not log on startup if Intel RDT is not supported. ([#5293](https://github.com/cri-o/cri-o/pull/5293), [@saschagrunert](https://github.com/saschagrunert))
  - Switched build artifacts to be published via the [cri-o](https://console.cloud.google.com/storage/browser/cri-o) bucket. ([#4761](https://github.com/cri-o/cri-o/pull/4761), [@saschagrunert](https://github.com/saschagrunert))
  - Use build tag for `linkmode` detection on `crio version`. ([#5239](https://github.com/cri-o/cri-o/pull/5239), [@saschagrunert](https://github.com/saschagrunert))
 
