Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...7a3c55d](https://github.com/cri-o/cri-o/compare/v1.21.0...7a3c55da54a5055bf7ddf5100d9720554d8acbc7) on Mon, 13 Sep 2021 16:32:13 UTC.
+[v1.21.0...8d4d158](https://github.com/cri-o/cri-o/compare/v1.21.0...8d4d158935929800c4300b82eb4b5a83ded400f4) on Mon, 13 Sep 2021 19:42:57 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.7a3c55da54a5055bf7ddf5100d9720554d8acbc7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.7a3c55da54a5055bf7ddf5100d9720554d8acbc7.tar.gz)
-- [cri-o.arm64.7a3c55da54a5055bf7ddf5100d9720554d8acbc7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.7a3c55da54a5055bf7ddf5100d9720554d8acbc7.tar.gz)
+- [cri-o.amd64.8d4d158935929800c4300b82eb4b5a83ded400f4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8d4d158935929800c4300b82eb4b5a83ded400f4.tar.gz)
+- [cri-o.arm64.8d4d158935929800c4300b82eb4b5a83ded400f4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8d4d158935929800c4300b82eb4b5a83ded400f4.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -81,6 +81,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Add the config field `internal_wipe` which moves the responsibility of wiping containers after a reboot and images after an upgrade from the external binary `crio wipe` to the main crio server. This has a handful of advantages, the main one being crio is now better able to cleanup CNI resources after a reboot. ([#4767](https://github.com/cri-o/cri-o/pull/4767), [@haircommander](https://github.com/haircommander))
  - Allow users to customize conmon's resources if a pod is in a workload. ([#4907](https://github.com/cri-o/cri-o/pull/4907), [@haircommander](https://github.com/haircommander))
  - CRI-O now logs when it is using cgroupv2 ([#5183](https://github.com/cri-o/cri-o/pull/5183), [@haircommander](https://github.com/haircommander))
+ - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5283](https://github.com/cri-o/cri-o/pull/5283), [@haircommander](https://github.com/haircommander))
  - Fix a bug in `internal_wipe` that would mean CNI resources would be leaked across reboots. ([#4900](https://github.com/cri-o/cri-o/pull/4900), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O can't work with runc 1.0.0-rc93 because of an incorrectly specified list of capabilities ([#4828](https://github.com/cri-o/cri-o/pull/4828), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O would leak opened files for namespaces on a server restore ([#4758](https://github.com/cri-o/cri-o/pull/4758), [@haircommander](https://github.com/haircommander))
@@ -96,10 +97,12 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix an issue where a container started with a terminal fails on exec sync calls ([#5107](https://github.com/cri-o/cri-o/pull/5107), [@haircommander](https://github.com/haircommander))
  - Fix drop ALL and add back few caps behavior to not include the default configured capabilities ([#4923](https://github.com/cri-o/cri-o/pull/4923), [@mrunalp](https://github.com/mrunalp))
  - Fix potential panic when reopening a container's log ([#5212](https://github.com/cri-o/cri-o/pull/5212), [@haircommander](https://github.com/haircommander))
+ - Fixed `contrib/metrics-exporter/cluster.yaml` for `kubectl create`. ([#5286](https://github.com/cri-o/cri-o/pull/5286), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed bug where it was not possible to run containers using the default or no seccomp profile on 
   seccomp disabled builds/machines ([#4789](https://github.com/cri-o/cri-o/pull/4789), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed bug where runtime VM created containers never reach their `completed` state. ([#4803](https://github.com/cri-o/cri-o/pull/4803), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed linkmode detection for on `en_US` systems `crio version` ([#5168](https://github.com/cri-o/cri-o/pull/5168), [@saschagrunert](https://github.com/saschagrunert))
+ - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5258](https://github.com/cri-o/cri-o/pull/5258), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed runtime panic for layers lockfile if its parent directory does not exist.
   Added support for repositories in auth.json ([#5076](https://github.com/cri-o/cri-o/pull/5076), [@saschagrunert](https://github.com/saschagrunert))
  - Re-attempt setting up conmon's cgroup if it fails on EAGAIN from dbus ([#4921](https://github.com/cri-o/cri-o/pull/4921), [@haircommander](https://github.com/haircommander))
@@ -110,6 +113,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Other (Cleanup or Flake)
  - Add systemd After=crio.service to containers and conmon ([#4766](https://github.com/cri-o/cri-o/pull/4766), [@mrunalp](https://github.com/mrunalp))
+ - Do not log on startup if Intel RDT is not supported. ([#5293](https://github.com/cri-o/cri-o/pull/5293), [@saschagrunert](https://github.com/saschagrunert))
  - Switched build artifacts to be published via the [cri-o](https://console.cloud.google.com/storage/browser/cri-o) bucket. ([#4761](https://github.com/cri-o/cri-o/pull/4761), [@saschagrunert](https://github.com/saschagrunert))
  - Use build tag for `linkmode` detection on `crio version`. ([#5239](https://github.com/cri-o/cri-o/pull/5239), [@saschagrunert](https://github.com/saschagrunert))
 
@@ -117,9 +121,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Add Particule as adopters ([#4994](https://github.com/cri-o/cri-o/pull/4994), [@ArchiFleKs](https://github.com/ArchiFleKs))
  - Add `--device-ownership-from-security-context` which allows an admin to specify devices be configured to be owned by the container user and group, rather than unconditionally being root. ([#4620](https://github.com/cri-o/cri-o/pull/4620), [@mythi](https://github.com/mythi))
  - Added `internal/process/defunct_processes.go` and `crio_processes_defunct` metric to collect the total number of defunct/zombie processes in a node. ([#5082](https://github.com/cri-o/cri-o/pull/5082), [@raisaat](https://github.com/raisaat))
- - Do not log on startup if Intel RDT is not supported. ([#5298](https://github.com/cri-o/cri-o/pull/5298), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
- - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5295](https://github.com/cri-o/cri-o/pull/5295), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
- - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5259](https://github.com/cri-o/cri-o/pull/5259), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Raise a warning when creating a bind mount on the container root ([#4853](https://github.com/cri-o/cri-o/pull/4853), [@giuseppe](https://github.com/giuseppe))
 
 ## Dependencies
@@ -233,7 +234,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containers/common: [v0.35.4 → v0.43.2](https://github.com/containers/common/compare/v0.35.4...v0.43.2)
 - github.com/containers/image/v5: [v5.11.0 → v5.15.2](https://github.com/containers/image/v5/compare/v5.11.0...v5.15.2)
 - github.com/containers/ocicrypt: [v1.1.0 → v1.1.2](https://github.com/containers/ocicrypt/compare/v1.1.0...v1.1.2)
-- github.com/containers/podman/v3: [v3.1.0 → v3.3.0](https://github.com/containers/podman/v3/compare/v3.1.0...v3.3.0)
+- github.com/containers/podman/v3: [v3.1.0 → v3.3.1](https://github.com/containers/podman/v3/compare/v3.1.0...v3.3.1)
 - github.com/containers/storage: [v1.28.1 → v1.34.1](https://github.com/containers/storage/compare/v1.28.1...v1.34.1)
 - github.com/coredns/corefile-migration: [v1.0.11 → v1.0.12](https://github.com/coredns/corefile-migration/compare/v1.0.11...v1.0.12)
 - github.com/coreos/go-systemd/v22: [v22.3.1 → v22.3.2](https://github.com/coreos/go-systemd/v22/compare/v22.3.1...v22.3.2)
@@ -245,11 +246,14 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/envoyproxy/go-control-plane: [5f8ba28 → 63b5d3c](https://github.com/envoyproxy/go-control-plane/compare/5f8ba28...63b5d3c)
 - github.com/evanphx/json-patch: [v4.9.0+incompatible → v4.11.0+incompatible](https://github.com/evanphx/json-patch/compare/v4.9.0...v4.11.0)
 - github.com/form3tech-oss/jwt-go: [v3.2.2+incompatible → v3.2.3+incompatible](https://github.com/form3tech-oss/jwt-go/compare/v3.2.2...v3.2.3)
+- github.com/fsnotify/fsnotify: [v1.4.9 → v1.5.1](https://github.com/fsnotify/fsnotify/compare/v1.4.9...v1.5.1)
 - github.com/fsouza/go-dockerclient: [v1.7.2 → v1.7.3](https://github.com/fsouza/go-dockerclient/compare/v1.7.2...v1.7.3)
 - github.com/go-kit/kit: [v0.10.0 → v0.9.0](https://github.com/go-kit/kit/compare/v0.10.0...v0.9.0)
+- github.com/go-logr/logr: [v0.4.0 → v1.1.0](https://github.com/go-logr/logr/compare/v0.4.0...v1.1.0)
 - github.com/go-openapi/jsonpointer: [v0.19.3 → v0.19.5](https://github.com/go-openapi/jsonpointer/compare/v0.19.3...v0.19.5)
 - github.com/go-openapi/jsonreference: [v0.19.3 → v0.19.5](https://github.com/go-openapi/jsonreference/compare/v0.19.3...v0.19.5)
 - github.com/go-openapi/swag: [v0.19.5 → v0.19.14](https://github.com/go-openapi/swag/compare/v0.19.5...v0.19.14)
+- github.com/godbus/dbus/v5: [v5.0.4 → v5.0.5](https://github.com/godbus/dbus/v5/compare/v5.0.4...v5.0.5)
 - github.com/gofrs/flock: [v0.8.0 → v0.8.1](https://github.com/gofrs/flock/compare/v0.8.0...v0.8.1)
 - github.com/golang/groupcache: [8c9f03a → 41bb18b](https://github.com/golang/groupcache/compare/8c9f03a...41bb18b)
 - github.com/golang/mock: [v1.5.0 → v1.6.0](https://github.com/golang/mock/compare/v1.5.0...v1.6.0)
@@ -331,7 +335,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - gopkg.in/gcfg.v1: v1.2.3 → v1.2.0
 - gopkg.in/ini.v1: v1.51.0 → v1.62.0
 - gopkg.in/yaml.v3: eeeca48 → 496545a
-- k8s.io/klog/v2: v2.8.0 → v2.10.0
+- k8s.io/klog/v2: v2.8.0 → v2.20.0
 - k8s.io/kube-openapi: 591a79e → 9528897
 - k8s.io/kubernetes/staging/src/k8s.io/api: cb303e6 → c2b5237
 - k8s.io/kubernetes/staging/src/k8s.io/apiextensions-apiserver: cb303e6 → c2b5237
