--- a/v1.21.3.md
+++ b/v1.21.3.md
@@ -12,14 +12,14 @@
 # CRI-O v1.21.3
 
 The release notes have been generated for the commit range
-[v1.21.2...ff0b7fe](https://github.com/cri-o/cri-o/compare/v1.21.2...ff0b7feb8e12509076b4b0e338b6334ce466b293) on Thu, 09 Sep 2021 23:27:08 UTC.
+[v1.21.2...3583716](https://github.com/cri-o/cri-o/compare/v1.21.2...3583716d2057b86e47cdb97add63a52717bcc701) on Fri, 24 Sep 2021 14:04:48 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.ff0b7feb8e12509076b4b0e338b6334ce466b293.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.ff0b7feb8e12509076b4b0e338b6334ce466b293.tar.gz)
-- [cri-o.arm64.ff0b7feb8e12509076b4b0e338b6334ce466b293.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.ff0b7feb8e12509076b4b0e338b6334ce466b293.tar.gz)
+- [cri-o.amd64.3583716d2057b86e47cdb97add63a52717bcc701.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.3583716d2057b86e47cdb97add63a52717bcc701.tar.gz)
+- [cri-o.arm64.3583716d2057b86e47cdb97add63a52717bcc701.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.3583716d2057b86e47cdb97add63a52717bcc701.tar.gz)
 
 ## Changelog since v1.21.2
 
@@ -40,7 +40,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 _Nothing has changed._
 
 ### Changed
-_Nothing has changed._
+- github.com/opencontainers/selinux: [v1.8.2 → v1.8.5](https://github.com/opencontainers/selinux/compare/v1.8.2...v1.8.5)
 
 ### Removed
 - github.com/rjeczalik/notify: [v0.9.2](https://github.com/rjeczalik/notify/tree/v0.9.2)
