--- a/v1.21.3.md
+++ b/v1.21.3.md
@@ -12,14 +12,14 @@
 # CRI-O v1.21.3
 
 The release notes have been generated for the commit range
-[v1.21.2...3583716](https://github.com/cri-o/cri-o/compare/v1.21.2...3583716d2057b86e47cdb97add63a52717bcc701) on Fri, 24 Sep 2021 14:04:48 UTC.
+[v1.21.2...2933275](https://github.com/cri-o/cri-o/compare/v1.21.2...2933275cc35386e77ab1257d1dc1231b8dc58402) on Fri, 01 Oct 2021 11:25:21 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.3583716d2057b86e47cdb97add63a52717bcc701.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.3583716d2057b86e47cdb97add63a52717bcc701.tar.gz)
-- [cri-o.arm64.3583716d2057b86e47cdb97add63a52717bcc701.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.3583716d2057b86e47cdb97add63a52717bcc701.tar.gz)
+- [cri-o.amd64.2933275cc35386e77ab1257d1dc1231b8dc58402.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.2933275cc35386e77ab1257d1dc1231b8dc58402.tar.gz)
+- [cri-o.arm64.2933275cc35386e77ab1257d1dc1231b8dc58402.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.2933275cc35386e77ab1257d1dc1231b8dc58402.tar.gz)
 
 ## Changelog since v1.21.2
 
@@ -31,6 +31,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix potential panic when reopening a container's log ([#5213](https://github.com/cri-o/cri-o/pull/5213), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
+ - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5297](https://github.com/cri-o/cri-o/pull/5297), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix an RSS regression with exec sync requests ([#5262](https://github.com/cri-o/cri-o/pull/5262), [@haircommander](https://github.com/haircommander))
  - Fix an issue where a container started with a terminal fails on exec sync calls ([#5121](https://github.com/cri-o/cri-o/pull/5121), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
