Update release notes

--- a/v1.20.5.md
+++ b/v1.20.5.md
@@ -13,14 +13,14 @@
 # CRI-O v1.20.5
 
 The release notes have been generated for the commit range
-[v1.20.4...5739238](https://github.com/cri-o/cri-o/compare/v1.20.4...57392384dcccfb3b0edde6a814aef649246680a4) on Tue, 14 Sep 2021 17:57:28 UTC.
+[v1.20.4...5fcc3f9](https://github.com/cri-o/cri-o/compare/v1.20.4...5fcc3f95e3dac505123b3401fe15aaf7ef8e8510) on Wed, 06 Oct 2021 19:47:01 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.57392384dcccfb3b0edde6a814aef649246680a4.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.57392384dcccfb3b0edde6a814aef649246680a4.tar.gz)
-- [cri-o.arm64.57392384dcccfb3b0edde6a814aef649246680a4.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.57392384dcccfb3b0edde6a814aef649246680a4.tar.gz)
+- [cri-o.amd64.5fcc3f95e3dac505123b3401fe15aaf7ef8e8510.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.5fcc3f95e3dac505123b3401fe15aaf7ef8e8510.tar.gz)
+- [cri-o.arm64.5fcc3f95e3dac505123b3401fe15aaf7ef8e8510.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.5fcc3f95e3dac505123b3401fe15aaf7ef8e8510.tar.gz)
 
 ## Changelog since v1.20.4
 
@@ -38,6 +38,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Uncategorized
  - Fix an RSS regression with exec sync requests ([#5270](https://github.com/cri-o/cri-o/pull/5270), [@mrunalp](https://github.com/mrunalp))
+ - Fix an issue when a container with a terminal has an exec probe ([#5364](https://github.com/cri-o/cri-o/pull/5364), [@haircommander](https://github.com/haircommander))
  - Fix an issue where a container started with a terminal fails on exec sync calls ([#5122](https://github.com/cri-o/cri-o/pull/5122), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
