--- a/v1.21.3.md
+++ b/v1.21.3.md
@@ -12,14 +12,14 @@
 # CRI-O v1.21.3
 
 The release notes have been generated for the commit range
-[v1.21.2...2933275](https://github.com/cri-o/cri-o/compare/v1.21.2...2933275cc35386e77ab1257d1dc1231b8dc58402) on Fri, 01 Oct 2021 11:25:21 UTC.
+[v1.21.2...b6c7cb9](https://github.com/cri-o/cri-o/compare/v1.21.2...b6c7cb9a7b51ebd6ae84d87bba108eacc755d1d1) on Thu, 07 Oct 2021 07:23:23 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.2933275cc35386e77ab1257d1dc1231b8dc58402.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.2933275cc35386e77ab1257d1dc1231b8dc58402.tar.gz)
-- [cri-o.arm64.2933275cc35386e77ab1257d1dc1231b8dc58402.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.2933275cc35386e77ab1257d1dc1231b8dc58402.tar.gz)
+- [cri-o.amd64.b6c7cb9a7b51ebd6ae84d87bba108eacc755d1d1.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.b6c7cb9a7b51ebd6ae84d87bba108eacc755d1d1.tar.gz)
+- [cri-o.arm64.b6c7cb9a7b51ebd6ae84d87bba108eacc755d1d1.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.b6c7cb9a7b51ebd6ae84d87bba108eacc755d1d1.tar.gz)
 
 ## Changelog since v1.21.2
 
@@ -34,6 +34,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5297](https://github.com/cri-o/cri-o/pull/5297), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix an RSS regression with exec sync requests ([#5262](https://github.com/cri-o/cri-o/pull/5262), [@haircommander](https://github.com/haircommander))
  - Fix an issue where a container started with a terminal fails on exec sync calls ([#5121](https://github.com/cri-o/cri-o/pull/5121), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5266](https://github.com/cri-o/cri-o/pull/5266), [@saschagrunert](https://github.com/saschagrunert))
 
 ## Dependencies
 
